--- a/css/index.css
+++ b/css/index.css
@@ -71,6 +71,21 @@ p {
     margin: 0 auto;
 }
 
+nav {
+    display: flex;
+}
+
+nav div{
+    width: 20%;
+}
+
+nav ul{
+    width: 60%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
 .top-content {
     display: flex;
     flex-wrap: wrap;
