--- a/css/index.css
+++ b/css/index.css
@@ -77,6 +77,7 @@ nav {
 
 nav div{
     width: 20%;
+    margin-left: 16%;
 }
 
 nav ul{
@@ -86,11 +87,25 @@ nav ul{
   align-items: center;
 }
 
+nav ul li a{
+    text-decoration: none;
+    color: gray;
+}
+
+.highway {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    padding-top: 30px;
+}
+
 .top-content {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     margin-bottom: 20px;
+    padding-top: 30px;
     border-bottom: 1px dashed black;
 }
 
@@ -116,10 +131,110 @@ nav ul{
     justify-content: space-evenly;
 }
 
-.middle-content .boxes .box {
+
+.box1 {
+    background-color: teal;
     width: 12.5%;
     height: 100px;
-    background: black;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box2{
+    background-color: gold;
+    width: 12.5%;
+    height: 100px;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box3{
+    background-color: cadetblue;
+    width: 12.5%;
+    height: 100px;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box4{
+    background-color: coral;
+    width: 12.5%;
+    height: 100px;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box5 {
+    background-color: crimson;
+    width: 12.5%;
+    height: 100px;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box6{
+    background-color: forestgreen;
+    width: 12.5%;
+    height: 100px;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box7{
+    background-color: darkorchid;
+    width: 12.5%;
+    height: 100px;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box8{
+    background-color: hotpink;
+    width: 12.5%;
+    height: 100px;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box9{
+    background-color: indigo;
+    width: 12.5%;
+    height: 100px;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box10{
+    background-color: dodgerblue;
+    width: 12.5%;
+    height: 100px;
     margin: 20px 2.5%;
     color: white;
     display: flex;
@@ -158,4 +273,88 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+
+/* About Page */
+
+
+.cityView{
+    width: 100%;
+    margin-left: 30%;
+    padding-bottom: 25px;
+}
+
+.abtcontainer{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.abtcontainer h2{
+    padding-left: 300px;
+}
+
+.abtcontainer p{
+   padding-left: 300px;
+   padding-right: 300px;
+}
+
+.about-page{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+}
+
+.about-page .child1{
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    border:solid red 1px;
+    align-items: flex-start;
+    padding: 30px;
+}
+
+
+
+.about-page .child2{
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    border:solid blue 1px;
+    align-items: flex-start;
+    padding: 30px;
+}
+
+.about-page .child3{
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    border:solid grey 1px;
+    align-items: flex-start;
+    padding: 30px;
+}
+
+.about-page .child4{
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    border:solid pink 1px;
+    align-items: flex-start;
+    padding: 30px;
+}
+
+.about-page div h2 {
+    padding-top: 20px;
+}
+
+.about-page div p{
+    padding-right: 300px;
+}
+
+.about-page button{
+    height: 50px;
+    width: 100px;
+    border-radius: 20%;
+    background-color: grey;
 }
