--- a/css/index.css
+++ b/css/index.css
@@ -289,6 +289,7 @@ footer nav a {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    padding-bottom: 40px;
 }
 
 .abtcontainer h2{
@@ -303,14 +304,17 @@ footer nav a {
 .about-page{
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-evenly;
+ justify-content: space-evenly;
+     align-items: center;
+    border-bottom: 2px dotted black;
+    border-top: 2px dotted black;
+    padding-left: 300px;
 }
 
 .about-page .child1{
     width: 45%;
     display: flex;
     flex-direction: column;
-    border:solid red 1px;
     align-items: flex-start;
     padding: 30px;
 }
@@ -321,7 +325,6 @@ footer nav a {
     width: 45%;
     display: flex;
     flex-direction: column;
-    border:solid blue 1px;
     align-items: flex-start;
     padding: 30px;
 }
@@ -330,7 +333,6 @@ footer nav a {
     width: 45%;
     display: flex;
     flex-direction: column;
-    border:solid grey 1px;
     align-items: flex-start;
     padding: 30px;
 }
@@ -339,7 +341,6 @@ footer nav a {
     width: 45%;
     display: flex;
     flex-direction: column;
-    border:solid pink 1px;
     align-items: flex-start;
     padding: 30px;
 }
@@ -358,3 +359,18 @@ footer nav a {
     border-radius: 20%;
     background-color: grey;
 }
+
+.letswork{
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 30px;
+}
+
+.letswork h2{
+    padding: 30px 0 0 220px;
+}
+
+.letswork p{
+    padding-left: 220px;
+}
+
